--- a/index.html
+++ b/index.html
@@ -1,32 +1,85 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Comatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, intial-scale=1.0">
-    <title>Lucky Number</title>
-    <link rel="stylesheet" href="lucky.css">
-    <script src="lucky.js"></script>
-</head>
-<body>
-    <div id="mainbox" class="mainbox">
-        <div id="box" class="box">
-            <div class="box1">
-                <span class="span1"><b>5</b></span>
-                <span class="span2"><b>10</b></span>
-                <span class="span3"><b>15</b></span>
-                <span class="span4"><b>20</b></span>
-                <span class="span1"><b>25</b></span>
-            </div>
-            <div class="box2">
-                <span class="span2"><b>30</b></span>
-                <span class="span3"><b>35</b></span>
-                <span class="span4"><b>40</b></span>
-                <span class="span1"><b>45</b></span>
-                <span class="span1"><b>50</b></span>
-            </div>
-        </div>
-        <button class="spin" onclick="myfunction()">SPIN</button>
-    </div>
-</body>
+  <head>
+    <title>JavaScript &amp; jQuery - Chapter 2: Basic JavaScript Instructions</title>
+    <link rel="stylesheet" type="text/css" href="index.css" />
+  </head>
+  <body>
+    <h1 id="header"><a href="index.html">JavaScript &amp; jQuery</a></h1>
+    <h2>Chapter 2: Basic JavaScript Instructions</h2>
+    <table>
+        <tr>
+          <td>1</td>
+          <td><strong>Using A Variable To Store A Number</strong></td>
+          <td><a href="numeric-variable.html">numeric-variable.html</a></td>
+          <td><a href="numeric-variable.js">numeric-variable.js</a></td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td><strong>Using a Variable to Store a String</strong></td>
+          <td><a href="string-variable.html">string-variable.html</a></td>
+          <td><a href="string-variable.js">string-variable.js</a></td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td><strong>Using Quotes Inside a String</strong></td>
+          <td><a href="string-with-quotes.html">string-with-quotes.html</a></td>
+          <td><a href="string-with-quotes.js">string-with-quotes.js</a></td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td><strong>Using a Variable to Store a Boolean</strong></td>
+          <td><a href="variable.html">boolean-variable.html</a></td>
+          <td><a href="variable.js">boolean-variable.js</a></td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td><strong>Shorthand for Creating Variables</strong></td>
+          <td><a href="shorthand-variable.html">shorthand-variable.html</a></td>
+          <td><a href="shorthand-variable.js">shorthand-variable.js</a></td>
+        </tr>
+        <tr>
+          <td>6</td>
+          <td><strong>Changing the Value of a Variable</strong></td>
+          <td><a href="update-variable.html">update-variable.html</a></td>
+          <td><a href="update-variable.js">update-variable.js</a></td>
+      </tr>
+      <tr>
+        <td>7</td>
+        <td><strong>Creating an Array (i)</strong></td>
+        <td><a href="array-literal.html">array-literal.html</a></td>
+        <td><a href="array-literal.js">array-literal.js</a></td>
+      </tr>
+      <tr>
+        <td>8</td>
+        <td><strong>Creating an Array (ii)</strong></td>
+        <td><a href="array-contructor.html">array-constructor.html</a></td>
+        <td><a href="array-constructor.js">array-constructor.js</a></td>
+      </tr>
+      <tr>
+        <td>9</td>
+        <td><strong>Accessing &amp; Changing Values in an Array</strong></td>
+        <td><a href="update-array.html">update-array.html</a></td>
+        <td><a href="update-array.js">update-array.js</a></td>
+      </tr>
+      <tr>
+        <td>10</td>
+        <td><strong>Using Arithmetic Operators</strong></td>
+        <td><a href="arthimetic-operator.html">arithmetic-operator.html</a></td>
+        <td><a href="arthimetic-operator.js">arithmetic-operator.js</a></td>
+      </tr>
+      <tr>
+        <td>11</td>
+        <td><strong>Using String Operators</strong></td>
+        <td><a href="string-operator.html">string-operator.html</a></td>
+        <td><a href="string-operator.js">string-operator.js</a></td>
+      </tr>
+      <tr>
+        <td>12</td>
+        <td><strong>Example</strong></td>
+        <td><a href="example.html">example.html</a></td>
+        <td><a href="example.js">example.js</a></td>
+      </tr>
+    </table>
+  </body>
 </html>
