--- a/JS/c02/update-array.html
+++ b/JS/c02/update-array.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Elderflower</h1>
     <div id="content">
-      <div class="message">Color: <span id="colors">We were unable to find your color choice. Please try again...</span></div>
+      <div class="message">Color: <span id="colorsx">We were unable to find your color choice. Please try again...</span></div>
     </div>
     <script src="update-array.js"></script>
   </body>
