--- a/JS/Exam/exam.html
+++ b/JS/Exam/exam.html
@@ -36,6 +36,7 @@
             max-height: fit-content;
             margin-bottom: 10px;
             border-radius: 5px;
+            height: 550px;
         }
         p, h3{
             padding: 2px;
@@ -57,7 +58,7 @@
             margin-bottom: 10px ;
             text-align: center;
             border-radius: 5px;
-            
+            height: 383px;
         }
         img{
             height: 200px;
