--- a/JS/Exam/exam.html
+++ b/JS/Exam/exam.html
@@ -61,6 +61,7 @@
             height: 383px;
         }
         img{
+            margin: 15px;
             height: 200px;
             width: 150px;
         }
